--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/styles.css">
+    <link rel="stylesheet" href="../assets/css/styles.css"><!--Se corrigió la ruta a la hoja de estilos-->
     <title>APIs</title>
 </head>
 <body>
+    <h1>APIs</h1><!--Se añaden titulos para contexto-->
+    <h3>Nombre:</h3><!--Se añaden titulos para contexto-->
     <p class="name"></p>
+    <h3>Blog:</h3><!--Se añaden titulos para contexto-->
     <p class="blog"></p>
+    <h3>Location:</h3><!--Se añaden titulos para contexto-->
+    <p class="location"></p> <!--Se añade un parrafo con clase location-->
 
   <script src="../assets/js/app.js"></script>
 </body>
